Switch to saving under playlist titles and fix frontend logic

--- a/client/index.html
+++ b/client/index.html
@@ -244,9 +244,9 @@
             <input type="radio" id="radio-list-options-channel" name="list-options" value="channel" checked />
             Save Under Channel Name
           </label>
-          <label for="radio-list-options-uploader" class="radio-label">
-            <input type="radio" id="radio-list-options-uploader" name="list-options" value="uploader" />
-            Save Under Playlist Creator's Name
+          <label for="radio-list-options-playlist-name" class="radio-label">
+            <input type="radio" id="radio-list-options-playlist-name" name="list-options" value="uploader" />
+            Save Under Playlist's Name
           </label>
         </div>
       </fieldset>
